@startuml

skinparam componentStyle uml2

package "'Pessoa' Aggregate" <<Rectangle>> {
	class Pessoa <<(A,#fffab8) Aggregate Root>> {
		String nome_pessoa
		String cpf
		Date data_pessoa
		IdPessoa id_pessoa
		Endereco endereco_pessoa
		Contato contato_pessoa
		List<IdAnimal> animais_adotados
		Preferencias preferencias
		Preferencias getPreferencias()
		void setPreferencias(Preferencias preferencias)
		IdPessoa getIdPessoa()
		Endereco getEnderecoPessoa()
		void setEnderecoPessoa(Endereco enderecoPessoa)
		Contato getContatoPessoa()
		void setContatoPessoa(Contato contatoPessoa)
		String getNomePessoa()
		void setNomePessoa(String nomePessoa)
		String getCpf()
		Date getDataPessoa()
	}
	class IdPessoa <<(V,DarkSeaGreen) Value Object>> {
		int id_pessoa
		int getId()
	}
	class Preferencias <<(V,DarkSeaGreen) Value Object>> {
		List<String> especies
		List<String> racas
		List<String> portes
		List<String> sexos
		List<String> getEspecies()
		void setEspecies(List<String> especies)
		List<String> getRacas()
		void setRacas(List<String> racas)
		List<String> getPortes()
		void setPortes(List<String> portes)
		List<String> getSexos()
		void setSexos(List<String> sexos)
	}
}
Pessoa --> IdPessoa : id_pessoa
Pessoa --> Preferencias : preferencias


@enduml
